tests/idris2/error001/expected
1/1: Building Error (Error.idr)
Error: While processing right hand side of wrong. When unifying a and Vect ?k ?a.
Mismatch between: a and Vect ?k ?a.

Error.idr:6:19--6:20
   |
 6 | wrong x xs = x :: x
   |                   ^

